--- a/index.html
+++ b/index.html
@@ -591,7 +591,7 @@
              <li data-symbol="A g" aria-label="atomic symbol A g" class="bigfont2">A<span class="letter-tight">g</span></li>
              <li data-element="silver"><span class="bigfont1" aria-label="element">Silver</span></li>
              <li data-weight="107.87"><span class="bigfont1" aria-label="standard atomic weight 107 . 8 7">107.87</span></li>
-             <li data-groundstate="silver"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
+             <li data-groundstate="silver"><span class="bigfont1" aria-label="ground [Kr]4d 10 5 s">[Kr]4d<sup>10</sup>5s</span></li>
              <li data-ev="7.5762"><span class="bigfont1" aria-label="ionization energy 7 . 5 7 6 2">7.5762</span></li> 
           </ul>
        </td>
