--- a/index.html
+++ b/index.html
@@ -615,7 +615,16 @@
              <li data-ev="5.7864"><span class="bigfont1" aria-label="ionization energy 5 . 7 8 6 4">5.7864</span></li> 
           </ul>
        </td>
-      <td>Row 5, Cell 13</td>
+          <td id="tin" class="solids" tabindex="0">
+            <ul>
+             <li data-atomicnumber="50"><span class="bigfont1" aria-label="atomic number 50">50</span></li>
+             <li data-symbol="S n" aria-label="atomic symbol S n" class="bigfont2">S<span class="letter-tight">n</span></li>
+             <li data-element="tin"><span class="bigfont1" aria-label="element">Tin</span></li>
+             <li data-weight="118.71"><span class="bigfont1" aria-label="standard atomic weight 118 . 7 1">118.71</span></li>
+             <li data-groundstate="tin"><span class="bigfont1" aria-label="ground [Kr] 4 d 10 5 s 2 5 p 2">[Kr]4d<sup>10</sup>5s<sup>2</sup>5p<sup>2</sup></span></li>
+             <li data-ev="7.3439"><span class="bigfont1" aria-label="ionization energy 7 . 3 4 39 ">7.3439</span></li> 
+          </ul>
+       </td>
       <td>Row 5, Cell 14</td>
       <td>Row 5, Cell 15</td>
       <td>Row 5, Cell 16</td>
