--- a/index_backup1.html
+++ b/index_backup1.html
@@ -591,7 +591,7 @@
              <li data-symbol="A g" aria-label="atomic symbol A g" class="bigfont2">A<span class="letter-tight">g</span></li>
              <li data-element="silver"><span class="bigfont1" aria-label="element">Silver</span></li>
              <li data-weight="107.87"><span class="bigfont1" aria-label="standard atomic weight 107 . 8 7">107.87</span></li>
-             <li data-groundstate="silver"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
+             <li data-groundstate="silver"><span class="bigfont1" aria-label="ground [Kr]4d 10 5 s">[Kr]4d<sup>10</sup>5s</span></li>
              <li data-ev="7.5762"><span class="bigfont1" aria-label="ionization energy 7 . 5 7 6 2">7.5762</span></li> 
           </ul>
        </td>
@@ -615,7 +615,16 @@
              <li data-ev="5.7864"><span class="bigfont1" aria-label="ionization energy 5 . 7 8 6 4">5.7864</span></li> 
           </ul>
        </td>
-      <td>Row 5, Cell 13</td>
+          <td id="tin" class="solids" tabindex="0">
+            <ul>
+             <li data-atomicnumber="50"><span class="bigfont1" aria-label="atomic number 50">50</span></li>
+             <li data-symbol="S n" aria-label="atomic symbol S n" class="bigfont2">S<span class="letter-tight">n</span></li>
+             <li data-element="tin"><span class="bigfont1" aria-label="element">Tin</span></li>
+             <li data-weight="118.71"><span class="bigfont1" aria-label="standard atomic weight 118 . 7 1">118.71</span></li>
+             <li data-groundstate="tin"><span class="bigfont1" aria-label="ground [Kr] 4 d 10 5 s 2 5 p 2">[Kr]4d<sup>10</sup>5s<sup>2</sup>5p<sup>2</sup></span></li>
+             <li data-ev="7.3439"><span class="bigfont1" aria-label="ionization energy 7 . 3 4 39 ">7.3439</span></li> 
+          </ul>
+       </td>
       <td>Row 5, Cell 14</td>
       <td>Row 5, Cell 15</td>
       <td>Row 5, Cell 16</td>
