--- a/index.html
+++ b/index.html
@@ -581,7 +581,7 @@
              <li data-symbol="P d" aria-label="atomic symbol P d" class="bigfont2">P<span class="letter-tight">d</span></li>
              <li data-element="palladium"><span class="bigfont1" aria-label="element">Palladium</span></li>
              <li data-weight="106.42"><span class="bigfont1" aria-label="standard atomic weight 106 . 4 2">106.42</span></li>
-             <li data-groundstate="palladium"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
+             <li data-groundstate="palladium"><span class="bigfont1" aria-label="ground [Kr] 4 d 10">[Kr]4d<sup>10</sup></span></li>
              <li data-ev="8.3369"><span class="bigfont1" aria-label="ionization energy 8 . 3 3 6 9">8.3369</span></li> 
           </ul>
        </td>
