--- a/index.html
+++ b/index.html
@@ -571,7 +571,7 @@
              <li data-symbol="R h" aria-label="atomic symbol R h" class="bigfont2">R<span class="letter-tight">h</span></li>
              <li data-element="rhodium"><span class="bigfont1" aria-label="element">Rhodium</span></li>
              <li data-weight="102.91"><span class="bigfont1" aria-label="standard atomic weight 102 . 9 1">102.91</span></li>
-             <li data-groundstate="rhodium"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
+             <li data-groundstate="rhodium"><span class="bigfont1" aria-label="ground [Kr]4d 8 5s">[Kr]4d<sup>8</sup> 5s</span></li>
              <li data-ev="7.4589"><span class="bigfont1" aria-label="ionization energy 7 . 4 5 8 9">7.4589</span></li> 
           </ul>
        </td>
@@ -615,7 +615,7 @@
              <li data-ev="5.7864"><span class="bigfont1" aria-label="ionization energy 5 . 7 8 6 4">5.7864</span></li> 
           </ul>
        </td>
-          <td id="tin" class="solids" tabindex="0">
+       <td id="tin" class="solids" tabindex="0">
             <ul>
              <li data-atomicnumber="50"><span class="bigfont1" aria-label="atomic number 50">50</span></li>
              <li data-symbol="S n" aria-label="atomic symbol S n" class="bigfont2">S<span class="letter-tight">n</span></li>
@@ -624,8 +624,17 @@
              <li data-groundstate="tin"><span class="bigfont1" aria-label="ground [Kr] 4 d 10 5 s 2 5 p 2">[Kr]4d<sup>10</sup>5s<sup>2</sup>5p<sup>2</sup></span></li>
              <li data-ev="7.3439"><span class="bigfont1" aria-label="ionization energy 7 . 3 4 39 ">7.3439</span></li> 
           </ul>
-       </td>
-      <td>Row 5, Cell 14</td>
+      </td>
+      <td id="tin" class="solids" tabindex="0">
+            <ul>
+             <li data-atomicnumber="50"><span class="bigfont1" aria-label="atomic number 50">50</span></li>
+             <li data-symbol="S n" aria-label="atomic symbol S n" class="bigfont2">S<span class="letter-tight">n</span></li>
+             <li data-element="tin"><span class="bigfont1" aria-label="element">Tin</span></li>
+             <li data-weight="118.71"><span class="bigfont1" aria-label="standard atomic weight 118 . 7 1">118.71</span></li>
+             <li data-groundstate="tin"><span class="bigfont1" aria-label="ground [Kr] 4 d 10 5 s 2 5 p 2">[Kr]4d<sup>10</sup>5s<sup>2</sup>5p<sup>2</sup></span></li>
+             <li data-ev="7.3439"><span class="bigfont1" aria-label="ionization energy 7 . 3 4 39 ">7.3439</span></li> 
+          </ul>
+      </td>
       <td>Row 5, Cell 15</td>
       <td>Row 5, Cell 16</td>
       <td>Row 5, Cell 17</td>
