--- a/index.html
+++ b/index.html
@@ -561,7 +561,7 @@
              <li data-symbol="R u" aria-label="atomic symbol R u" class="bigfont2">R<span class="letter-tight">u</span></li>
              <li data-element="ruthenium"><span class="bigfont1" aria-label="element">Ruthenium</span></li>
              <li data-weight="101.07"><span class="bigfont1" aria-label="standard atomic weight 101 . 0 7">101.07</span></li>
-             <li data-groundstate="ruthenium"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
+             <li data-groundstate="ruthenium"><span class="bigfont1" aria-label="ground [Kr]4d 7 5s">[Kr]4d<sup>7</sup> 5s</span></li>
              <li data-ev="7.3605"><span class="bigfont1" aria-label="ionization energy 7 . 3 6 0 5">7.3605</span></li> 
           </ul>
        </td>
@@ -625,14 +625,14 @@
              <li data-ev="7.3439"><span class="bigfont1" aria-label="ionization energy 7 . 3 4 39 ">7.3439</span></li> 
           </ul>
       </td>
-      <td id="tin" class="solids" tabindex="0">
+      <td id="antimony" class="solids" tabindex="0">
             <ul>
-             <li data-atomicnumber="50"><span class="bigfont1" aria-label="atomic number 50">50</span></li>
-             <li data-symbol="S n" aria-label="atomic symbol S n" class="bigfont2">S<span class="letter-tight">n</span></li>
-             <li data-element="tin"><span class="bigfont1" aria-label="element">Tin</span></li>
-             <li data-weight="118.71"><span class="bigfont1" aria-label="standard atomic weight 118 . 7 1">118.71</span></li>
-             <li data-groundstate="tin"><span class="bigfont1" aria-label="ground [Kr] 4 d 10 5 s 2 5 p 2">[Kr]4d<sup>10</sup>5s<sup>2</sup>5p<sup>2</sup></span></li>
-             <li data-ev="7.3439"><span class="bigfont1" aria-label="ionization energy 7 . 3 4 39 ">7.3439</span></li> 
+             <li data-atomicnumber="51"><span class="bigfont1" aria-label="atomic number 51">51</span></li>
+             <li data-symbol="S b" aria-label="atomic symbol S b" class="bigfont2">S<span class="letter-tight">b</span></li>
+             <li data-element="antimony"><span class="bigfont1" aria-label="element">Antimony</span></li>
+             <li data-weight="121.76"><span class="bigfont1" aria-label="standard atomic weight 121 . 7 6">121.76</span></li>
+             <li data-groundstate="antimony"><span class="bigfont1" aria-label="ground [Kr] 4 d 10 5 s 2 5 p 3">[Kr]4d<sup>10</sup>5s<sup>2</sup>5p<sup>3</sup></span></li>
+             <li data-ev="8.6084"><span class="bigfont1" aria-label="ionization energy 8 . 6 0 8 4 ">8.6084</span></li> 
           </ul>
       </td>
       <td>Row 5, Cell 15</td>
