--- a/index_ko.html
+++ b/index_ko.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
    <!-- source for script https://developer.mozilla.org/en-US/docs/Web/Guide/HTML/Sections_and_Outlines_of_an_HTML5_document -->
    <!--[if lt IE 9]>
   <script>
@@ -135,7 +135,7 @@
              <li data-symbol="be" aria-label="atomic symbol B e" class="bigfont2">B<span class="letter-tight">e</span></li>
              <li data-element="beryllium"><span class="bigfont1" aria-label="element">Beryllium</span></li>
              <li data-weight="9.0122"><span class="bigfont1" aria-label="standard atomic weight 9 . 0 1 2 2">9.0122</span></li>
-             <li data-groundstate="beryllium"><span class="bigfont1" aria-label="ground state one s">1s^2 2s^2</span></li>
+             <li data-groundstate="beryllium"><span class="bigfont1" aria-label="ground state 1 s 2  2 s 2">1s<sup>2</sup> 2s<sup>2</sup></span></li>
              <li data-ev="9.3227"><span class="bigfont1" aria-label="ionization energy 9 . 3 2 2 7">9.3227</span></li> 
           </ul>
        </td>
@@ -155,7 +155,7 @@
              <li data-symbol="b" aria-label="atomic symbol B" class="bigfont2">B<span class="letter-tight">&nbsp;</span></li>
              <li data-element="boron"><span class="bigfont1" aria-label="element">Boron</span></li>
              <li data-weight="10.81"><span class="bigfont1" aria-label="standard atomic weight 10 . 8 1">10.81</span></li>
-             <li data-groundstate="boron"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
+             <li data-groundstate="boron"><span class="bigfont1" aria-label="ground 1 s 2 2 s 2 2 p">1s<sup>2</sup>2s<sup>2</sup>2p</span></li>
              <li data-ev="8.2980"><span class="bigfont1" aria-label="ionization energy 8 . 2 9 8 0">8.2980</span></li> 
           </ul>
        </td>
@@ -561,7 +561,7 @@
              <li data-symbol="R u" aria-label="atomic symbol R u" class="bigfont2">R<span class="letter-tight">u</span></li>
              <li data-element="ruthenium"><span class="bigfont1" aria-label="element">Ruthenium</span></li>
              <li data-weight="101.07"><span class="bigfont1" aria-label="standard atomic weight 101 . 0 7">101.07</span></li>
-             <li data-groundstate="ruthenium"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
+             <li data-groundstate="ruthenium"><span class="bigfont1" aria-label="ground [Kr]4d 7 5s">[Kr]4d<sup>7</sup> 5s</span></li>
              <li data-ev="7.3605"><span class="bigfont1" aria-label="ionization energy 7 . 3 6 0 5">7.3605</span></li> 
           </ul>
        </td>
@@ -571,7 +571,7 @@
              <li data-symbol="R h" aria-label="atomic symbol R h" class="bigfont2">R<span class="letter-tight">h</span></li>
              <li data-element="rhodium"><span class="bigfont1" aria-label="element">Rhodium</span></li>
              <li data-weight="102.91"><span class="bigfont1" aria-label="standard atomic weight 102 . 9 1">102.91</span></li>
-             <li data-groundstate="rhodium"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
+             <li data-groundstate="rhodium"><span class="bigfont1" aria-label="ground [Kr]4d 8 5s">[Kr]4d<sup>8</sup> 5s</span></li>
              <li data-ev="7.4589"><span class="bigfont1" aria-label="ionization energy 7 . 4 5 8 9">7.4589</span></li> 
           </ul>
        </td>
@@ -581,7 +581,7 @@
              <li data-symbol="P d" aria-label="atomic symbol P d" class="bigfont2">P<span class="letter-tight">d</span></li>
              <li data-element="palladium"><span class="bigfont1" aria-label="element">Palladium</span></li>
              <li data-weight="106.42"><span class="bigfont1" aria-label="standard atomic weight 106 . 4 2">106.42</span></li>
-             <li data-groundstate="palladium"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
+             <li data-groundstate="palladium"><span class="bigfont1" aria-label="ground [Kr] 4 d 10">[Kr]4d<sup>10</sup></span></li>
              <li data-ev="8.3369"><span class="bigfont1" aria-label="ionization energy 8 . 3 3 6 9">8.3369</span></li> 
           </ul>
        </td>
@@ -591,7 +591,7 @@
              <li data-symbol="A g" aria-label="atomic symbol A g" class="bigfont2">A<span class="letter-tight">g</span></li>
              <li data-element="silver"><span class="bigfont1" aria-label="element">Silver</span></li>
              <li data-weight="107.87"><span class="bigfont1" aria-label="standard atomic weight 107 . 8 7">107.87</span></li>
-             <li data-groundstate="silver"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
+             <li data-groundstate="silver"><span class="bigfont1" aria-label="ground [Kr]4d 10 5 s">[Kr]4d<sup>10</sup>5s</span></li>
              <li data-ev="7.5762"><span class="bigfont1" aria-label="ionization energy 7 . 5 7 6 2">7.5762</span></li> 
           </ul>
        </td>
@@ -601,13 +601,40 @@
              <li data-symbol="C d" aria-label="atomic symbol C d" class="bigfont2">C<span class="letter-tight">d</span></li>
              <li data-element="cadmium"><span class="bigfont1" aria-label="element">Cadmium</span></li>
              <li data-weight="112.41"><span class="bigfont1" aria-label="standard atomic weight 112 . 4 1">112.41</span></li>
-             <li data-groundstate="cadmium"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
+             <li data-groundstate="cadmium"><span class="bigfont1" aria-label="ground [Kr]4d 10 5 s 2">[Kr]4d<sup>10</sup>5s<sup>2</sup></span></li>
              <li data-ev="8.9938"><span class="bigfont1" aria-label="ionization energy 8 . 9 9 3 8">8.9938</span></li> 
           </ul>
        </td>
-      <td>Row 5, Cell 12</td>
-      <td>Row 5, Cell 13</td>
-      <td>Row 5, Cell 14</td>
+       <td id="indium" class="solids" tabindex="0">
+            <ul>
+             <li data-atomicnumber="49"><span class="bigfont1" aria-label="atomic number 49">49</span></li>
+             <li data-symbol="C d" aria-label="atomic symbol C d" class="bigfont2">C<span class="letter-tight">d</span></li>
+             <li data-element="indium"><span class="bigfont1" aria-label="element">Indium</span></li>
+             <li data-weight="114.82"><span class="bigfont1" aria-label="standard atomic weight 114 . 8 2">114.82</span></li>
+             <li data-groundstate="indium"><span class="bigfont1" aria-label="ground [Kr] 4 d 10 5 s 2 5p">[Kr]4d<sup>10</sup>5s<sup>2</sup>5p</span></li>
+             <li data-ev="5.7864"><span class="bigfont1" aria-label="ionization energy 5 . 7 8 6 4">5.7864</span></li> 
+          </ul>
+       </td>
+       <td id="tin" class="solids" tabindex="0">
+            <ul>
+             <li data-atomicnumber="50"><span class="bigfont1" aria-label="atomic number 50">50</span></li>
+             <li data-symbol="S n" aria-label="atomic symbol S n" class="bigfont2">S<span class="letter-tight">n</span></li>
+             <li data-element="tin"><span class="bigfont1" aria-label="element">Tin</span></li>
+             <li data-weight="118.71"><span class="bigfont1" aria-label="standard atomic weight 118 . 7 1">118.71</span></li>
+             <li data-groundstate="tin"><span class="bigfont1" aria-label="ground [Kr] 4 d 10 5 s 2 5 p 2">[Kr]4d<sup>10</sup>5s<sup>2</sup>5p<sup>2</sup></span></li>
+             <li data-ev="7.3439"><span class="bigfont1" aria-label="ionization energy 7 . 3 4 39 ">7.3439</span></li> 
+          </ul>
+      </td>
+      <td id="antimony" class="solids" tabindex="0">
+            <ul>
+             <li data-atomicnumber="51"><span class="bigfont1" aria-label="atomic number 51">51</span></li>
+             <li data-symbol="S b" aria-label="atomic symbol S b" class="bigfont2">S<span class="letter-tight">b</span></li>
+             <li data-element="antimony"><span class="bigfont1" aria-label="element">Antimony</span></li>
+             <li data-weight="121.76"><span class="bigfont1" aria-label="standard atomic weight 121 . 7 6">121.76</span></li>
+             <li data-groundstate="antimony"><span class="bigfont1" aria-label="ground [Kr] 4 d 10 5 s 2 5 p 3">[Kr]4d<sup>10</sup>5s<sup>2</sup>5p<sup>3</sup></span></li>
+             <li data-ev="8.6084"><span class="bigfont1" aria-label="ionization energy 8 . 6 0 8 4 ">8.6084</span></li> 
+          </ul>
+      </td>
       <td>Row 5, Cell 15</td>
       <td>Row 5, Cell 16</td>
       <td>Row 5, Cell 17</td>
@@ -735,11 +762,5 @@ function search_table(){
   }
 }
 </script> 
- <!-- See reference to mchem https://mhchem.github.io/MathJax-mhchem/ -->
- <!-- MathJaX JavaScript -->
-<script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
-<script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
- <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
  </body>   
 </html>
