--- a/index.html
+++ b/index.html
@@ -622,7 +622,7 @@
              <li data-element="tin"><span class="bigfont1" aria-label="element">Tin</span></li>
              <li data-weight="118.71"><span class="bigfont1" aria-label="standard atomic weight 118 . 7 1">118.71</span></li>
              <li data-groundstate="tin"><span class="bigfont1" aria-label="ground [Kr] 4 d 10 5 s 2 5 p 2">[Kr]4d<sup>10</sup>5s<sup>2</sup>5p<sup>2</sup></span></li>
-             <li data-ev="7.3439"><span class="bigfont1" aria-label="ionization energy 7 . 3 4 39 ">7.3439</span></li> 
+             <li data-ev="7.3439"><span class="bigfont1" aria-label="ionization energy 7 . 3 4 3 9">7.3439</span></li> 
           </ul>
       </td>
       <td id="antimony" class="solids" tabindex="0">
@@ -632,10 +632,19 @@
              <li data-element="antimony"><span class="bigfont1" aria-label="element">Antimony</span></li>
              <li data-weight="121.76"><span class="bigfont1" aria-label="standard atomic weight 121 . 7 6">121.76</span></li>
              <li data-groundstate="antimony"><span class="bigfont1" aria-label="ground [Kr] 4 d 10 5 s 2 5 p 3">[Kr]4d<sup>10</sup>5s<sup>2</sup>5p<sup>3</sup></span></li>
-             <li data-ev="8.6084"><span class="bigfont1" aria-label="ionization energy 8 . 6 0 8 4 ">8.6084</span></li> 
+             <li data-ev="8.6084"><span class="bigfont1" aria-label="ionization energy 8 . 6 0 8 4">8.6084</span></li> 
           </ul>
       </td>
-      <td>Row 5, Cell 15</td>
+      <td id="tellurium" class="solids" tabindex="0">
+            <ul>
+             <li data-atomicnumber="52"><span class="bigfont1" aria-label="atomic number 52">52</span></li>
+             <li data-symbol="T e" aria-label="atomic symbol T e" class="bigfont2">T<span class="letter-tight">e</span></li>
+             <li data-element="tellurium"><span class="bigfont1" aria-label="element">Tellurium</span></li>
+             <li data-weight="127.60"><span class="bigfont1" aria-label="standard atomic weight 127 . 6 0">127.60</span></li>
+             <li data-groundstate="tellurium"><span class="bigfont1" aria-label="ground [Kr] 4 d 10 5 s 2 5 p 4">[Kr]4d<sup>10</sup>5s<sup>2</sup>5p<sup>4</sup></span></li>
+             <li data-ev="9.0097"><span class="bigfont1" aria-label="ionization energy 9 . 0 0 9 7">9.0097</span></li> 
+          </ul>
+      </td>
       <td>Row 5, Cell 16</td>
       <td>Row 5, Cell 17</td>
       <td>Row 5, Cell 18</td>
