--- a/index_backup1.html
+++ b/index_backup1.html
@@ -561,7 +561,7 @@
              <li data-symbol="R u" aria-label="atomic symbol R u" class="bigfont2">R<span class="letter-tight">u</span></li>
              <li data-element="ruthenium"><span class="bigfont1" aria-label="element">Ruthenium</span></li>
              <li data-weight="101.07"><span class="bigfont1" aria-label="standard atomic weight 101 . 0 7">101.07</span></li>
-             <li data-groundstate="ruthenium"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
+             <li data-groundstate="ruthenium"><span class="bigfont1" aria-label="ground [Kr]4d 7 5s">[Kr]4d<sup>7</sup> 5s</span></li>
              <li data-ev="7.3605"><span class="bigfont1" aria-label="ionization energy 7 . 3 6 0 5">7.3605</span></li> 
           </ul>
        </td>
@@ -571,7 +571,7 @@
              <li data-symbol="R h" aria-label="atomic symbol R h" class="bigfont2">R<span class="letter-tight">h</span></li>
              <li data-element="rhodium"><span class="bigfont1" aria-label="element">Rhodium</span></li>
              <li data-weight="102.91"><span class="bigfont1" aria-label="standard atomic weight 102 . 9 1">102.91</span></li>
-             <li data-groundstate="rhodium"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
+             <li data-groundstate="rhodium"><span class="bigfont1" aria-label="ground [Kr]4d 8 5s">[Kr]4d<sup>8</sup> 5s</span></li>
              <li data-ev="7.4589"><span class="bigfont1" aria-label="ionization energy 7 . 4 5 8 9">7.4589</span></li> 
           </ul>
        </td>
@@ -581,7 +581,7 @@
              <li data-symbol="P d" aria-label="atomic symbol P d" class="bigfont2">P<span class="letter-tight">d</span></li>
              <li data-element="palladium"><span class="bigfont1" aria-label="element">Palladium</span></li>
              <li data-weight="106.42"><span class="bigfont1" aria-label="standard atomic weight 106 . 4 2">106.42</span></li>
-             <li data-groundstate="palladium"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
+             <li data-groundstate="palladium"><span class="bigfont1" aria-label="ground [Kr] 4 d 10">[Kr]4d<sup>10</sup></span></li>
              <li data-ev="8.3369"><span class="bigfont1" aria-label="ionization energy 8 . 3 3 6 9">8.3369</span></li> 
           </ul>
        </td>
@@ -615,18 +615,36 @@
              <li data-ev="5.7864"><span class="bigfont1" aria-label="ionization energy 5 . 7 8 6 4">5.7864</span></li> 
           </ul>
        </td>
-          <td id="tin" class="solids" tabindex="0">
+       <td id="tin" class="solids" tabindex="0">
             <ul>
              <li data-atomicnumber="50"><span class="bigfont1" aria-label="atomic number 50">50</span></li>
              <li data-symbol="S n" aria-label="atomic symbol S n" class="bigfont2">S<span class="letter-tight">n</span></li>
              <li data-element="tin"><span class="bigfont1" aria-label="element">Tin</span></li>
              <li data-weight="118.71"><span class="bigfont1" aria-label="standard atomic weight 118 . 7 1">118.71</span></li>
              <li data-groundstate="tin"><span class="bigfont1" aria-label="ground [Kr] 4 d 10 5 s 2 5 p 2">[Kr]4d<sup>10</sup>5s<sup>2</sup>5p<sup>2</sup></span></li>
-             <li data-ev="7.3439"><span class="bigfont1" aria-label="ionization energy 7 . 3 4 39 ">7.3439</span></li> 
+             <li data-ev="7.3439"><span class="bigfont1" aria-label="ionization energy 7 . 3 4 3 9">7.3439</span></li> 
           </ul>
-       </td>
-      <td>Row 5, Cell 14</td>
-      <td>Row 5, Cell 15</td>
+      </td>
+      <td id="antimony" class="solids" tabindex="0">
+            <ul>
+             <li data-atomicnumber="51"><span class="bigfont1" aria-label="atomic number 51">51</span></li>
+             <li data-symbol="S b" aria-label="atomic symbol S b" class="bigfont2">S<span class="letter-tight">b</span></li>
+             <li data-element="antimony"><span class="bigfont1" aria-label="element">Antimony</span></li>
+             <li data-weight="121.76"><span class="bigfont1" aria-label="standard atomic weight 121 . 7 6">121.76</span></li>
+             <li data-groundstate="antimony"><span class="bigfont1" aria-label="ground [Kr] 4 d 10 5 s 2 5 p 3">[Kr]4d<sup>10</sup>5s<sup>2</sup>5p<sup>3</sup></span></li>
+             <li data-ev="8.6084"><span class="bigfont1" aria-label="ionization energy 8 . 6 0 8 4">8.6084</span></li> 
+          </ul>
+      </td>
+      <td id="tellurium" class="solids" tabindex="0">
+            <ul>
+             <li data-atomicnumber="52"><span class="bigfont1" aria-label="atomic number 52">52</span></li>
+             <li data-symbol="T e" aria-label="atomic symbol T e" class="bigfont2">T<span class="letter-tight">e</span></li>
+             <li data-element="tellurium"><span class="bigfont1" aria-label="element">Tellurium</span></li>
+             <li data-weight="127.60"><span class="bigfont1" aria-label="standard atomic weight 127 . 6 0">127.60</span></li>
+             <li data-groundstate="tellurium"><span class="bigfont1" aria-label="ground [Kr] 4 d 10 5 s 2 5 p 4">[Kr]4d<sup>10</sup>5s<sup>2</sup>5p<sup>4</sup></span></li>
+             <li data-ev="9.0097"><span class="bigfont1" aria-label="ionization energy 9 . 0 0 9 7">9.0097</span></li> 
+          </ul>
+      </td>
       <td>Row 5, Cell 16</td>
       <td>Row 5, Cell 17</td>
       <td>Row 5, Cell 18</td>
