--- a/index.html
+++ b/index.html
@@ -551,7 +551,7 @@
              <li data-symbol="T c" aria-label="atomic symbol T c" class="bigfont2">T<span class="letter-tight">c</span></li>
              <li data-element="technetium"><span class="bigfont1" aria-label="element">Technetium</span></li>
              <li data-weight="97"><span class="bigfont1" aria-label="standard atomic weight 97">(97)</span></li>
-             <li data-groundstate="technetium"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
+             <li data-groundstate="technetium"><span class="bigfont1" aria-label="ground [Kr]4d 5 5s 2">[Kr]4d<sup>5</sup>5s<sup>2</sup></span></li>
              <li data-ev="7.1194"><span class="bigfont1" aria-label="ionization energy 7 . 1 1 9 4">7.1194</span></li> 
           </ul>
        </td>
