--- a/index.html
+++ b/index.html
@@ -655,8 +655,16 @@
              <li data-ev="10.4513"><span class="bigfont1" aria-label="ionization energy 10 . 4 5 1 3">10.4513</span></li> 
           </ul>
       </td>
-      <td>Row 5, Cell 17</td>
-      <td>Row 5, Cell 18</td>
+      <td id="xenon" class="gases" tabindex="0">
+            <ul>
+             <li data-atomicnumber="54"><span class="bigfont1" aria-label="atomic number 54">54</span></li>
+             <li data-symbol="X e" aria-label="atomic symbol X e" class="bigfont2">X<span class="letter-tight">e</span></li>
+             <li data-element="xenon"><span class="bigfont1" aria-label="element">Xenon</span></li>
+             <li data-weight=" 131.29"><span class="bigfont1" aria-label="standard atomic weight  131 . 2 9"> 131.29</span></li>
+             <li data-groundstate="xenon"><span class="bigfont1" aria-label="ground [Kr] 4 d 10 5 s 2 5 p 6">[Kr]4d<sup>10</sup>5s<sup>2</sup>5p<sup>6</sup></span></li>
+             <li data-ev="12.1298"><span class="bigfont1" aria-label="ionization energy 12 . 1 2 9 8">12.1298</span></li> 
+          </ul>
+      </td>
     </tr>
     <tr>
       <td>Row 6, Cell 1</td>
