--- a/index_backup2.html
+++ b/index_backup2.html
@@ -541,7 +541,7 @@
              <li data-symbol="M o" aria-label="atomic symbol M o" class="bigfont2">M<span class="letter-tight">o</span></li>
              <li data-element="molybdenum"><span class="bigfont1" aria-label="element">Molybdenum</span></li>
              <li data-weight="95.95"><span class="bigfont1" aria-label="standard atomic weight 95 . 9 5">95.95</span></li>
-             <li data-groundstate="molybdenum"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
+             <li data-groundstate="molybdenum"><span class="bigfont1" aria-label="ground [Kr]4d 5 5s">[Kr]4d<sup>5</sup> 5s</span></li>
              <li data-ev="7.0924"><span class="bigfont1" aria-label="ionization energy 7 . 0 9 2 4">7.0924</span></li> 
           </ul>
        </td>
@@ -645,9 +645,26 @@
              <li data-ev="9.0097"><span class="bigfont1" aria-label="ionization energy 9 . 0 0 9 7">9.0097</span></li> 
           </ul>
       </td>
-      <td>Row 5, Cell 16</td>
-      <td>Row 5, Cell 17</td>
-      <td>Row 5, Cell 18</td>
+     <td id="iodine" class="solids" tabindex="0">
+            <ul>
+             <li data-atomicnumber="53"><span class="bigfont1" aria-label="atomic number 53">53</span></li>
+             <li data-symbol="I" aria-label="atomic symbol I" class="bigfont2">I<span class="letter-tight">&nbsp;</span></li>
+             <li data-element="iodine"><span class="bigfont1" aria-label="element">Iodine</span></li>
+             <li data-weight="127.90"><span class="bigfont1" aria-label="standard atomic weight 127 . 9 0">127.90</span></li>
+             <li data-groundstate="iodine"><span class="bigfont1" aria-label="ground [Kr] 4 d 10 5 s 2 5 p 5">[Kr]4d<sup>10</sup>5s<sup>2</sup>5p<sup>5</sup></span></li>
+             <li data-ev="10.4513"><span class="bigfont1" aria-label="ionization energy 10 . 4 5 1 3">10.4513</span></li> 
+          </ul>
+      </td>
+      <td id="xenon" class="gases" tabindex="0">
+            <ul>
+             <li data-atomicnumber="54"><span class="bigfont1" aria-label="atomic number 54">54</span></li>
+             <li data-symbol="X e" aria-label="atomic symbol X e" class="bigfont2">X<span class="letter-tight">e</span></li>
+             <li data-element="xenon"><span class="bigfont1" aria-label="element">Xenon</span></li>
+             <li data-weight=" 131.29"><span class="bigfont1" aria-label="standard atomic weight  131 . 2 9"> 131.29</span></li>
+             <li data-groundstate="xenon"><span class="bigfont1" aria-label="ground [Kr] 4 d 10 5 s 2 5 p 6">[Kr]4d<sup>10</sup>5s<sup>2</sup>5p<sup>6</sup></span></li>
+             <li data-ev="12.1298"><span class="bigfont1" aria-label="ionization energy 12 . 1 2 9 8">12.1298</span></li> 
+          </ul>
+      </td>
     </tr>
     <tr>
       <td>Row 6, Cell 1</td>
