--- a/index.html
+++ b/index.html
@@ -667,7 +667,16 @@
       </td>
     </tr>
     <tr>
-      <td>Row 6, Cell 1</td>
+     <td id="cesium" class="solids" tabindex="0">
+            <ul>
+             <li data-atomicnumber="55"><span class="bigfont1" aria-label="atomic number 55">55</span></li>
+             <li data-symbol="C s" aria-label="atomic symbol C s" class="bigfont2">C<span class="letter-tight">s</span></li>
+             <li data-element="cesium"><span class="bigfont1" aria-label="element">Cesium</span></li>
+             <li data-weight=" 131.29"><span class="bigfont1" aria-label="standard atomic weight  131 . 2 9"> 131.29</span></li>
+             <li data-groundstate="cesium"><span class="bigfont1" aria-label="ground [Xe]6s">[Xe]6s</span></li>
+             <li data-ev="3.8939"><span class="bigfont1" aria-label="ionization energy 3 . 8 9 3 9">3.8939</span></li> 
+          </ul>
+      </td>
       <td>Row 6, Cell 2</td>
       <td>Row 6, Cell 3</td>
       <td>Row 6, Cell 4</td>
