--- a/index_backup2.html
+++ b/index_backup2.html
@@ -667,9 +667,27 @@
       </td>
     </tr>
     <tr>
-      <td>Row 6, Cell 1</td>
-      <td>Row 6, Cell 2</td>
-      <td>Row 6, Cell 3</td>
+     <td id="cesium" class="solids" tabindex="0">
+            <ul>
+             <li data-atomicnumber="55"><span class="bigfont1" aria-label="atomic number 55">55</span></li>
+             <li data-symbol="C s" aria-label="atomic symbol C s" class="bigfont2">C<span class="letter-tight">s</span></li>
+             <li data-element="cesium"><span class="bigfont1" aria-label="element">Cesium</span></li>
+             <li data-weight=" 131.29"><span class="bigfont1" aria-label="standard atomic weight  131 . 2 9"> 131.29</span></li>
+             <li data-groundstate="cesium"><span class="bigfont1" aria-label="ground [Xe]6s">[Xe]6s</span></li>
+             <li data-ev="3.8939"><span class="bigfont1" aria-label="ionization energy 3 . 8 9 3 9">3.8939</span></li> 
+          </ul>
+      </td>
+      <td id="barium" class="solids" tabindex="0">
+            <ul>
+             <li data-atomicnumber="56"><span class="bigfont1" aria-label="atomic number 56">56</span></li>
+             <li data-symbol="B a" aria-label="atomic symbol B a" class="bigfont2">B<span class="letter-tight">a</span></li>
+             <li data-element="barium"><span class="bigfont1" aria-label="element">Barium</span></li>
+             <li data-weight=" 137.33"><span class="bigfont1" aria-label="standard atomic weight  137 . 3 3"> 137.33</span></li>
+             <li data-groundstate="barium"><span class="bigfont1" aria-label="ground [Xe]6s 2">[Xe]6s<sup>2</sup></span></li>
+             <li data-ev="5.2117"><span class="bigfont1" aria-label="ionization energy 5 . 2 1 1 7">5.2117</span></li> 
+          </ul>
+      </td>
+      <td class="hidden">Row 6, Cell 3</td>
       <td>Row 6, Cell 4</td>
       <td>Row 6, Cell 5</td>
       <td>Row 6, Cell 6</td>
@@ -689,7 +707,7 @@
     <tr>
       <td>Row 7, Cell 1</td>
       <td>Row 7, Cell 2</td>
-      <td>Row 7, Cell 3</td>
+      <td class="hidden">Row 7, Cell 3</td>
       <td>Row 7, Cell 4</td>
       <td>Row 7, Cell 5</td>
       <td>Row 7, Cell 6</td>
@@ -707,8 +725,8 @@
       <td>Row 7, Cell 18</td>
     </tr>
     <tr>
-      <td>Row 8, Cell 1</td>
-      <td>Row 8, Cell 2</td>
+      <td class="hidden">Row 8, Cell 1</td>
+      <td class="hidden">Row 8, Cell 2</td>
       <td>Row 8, Cell 3</td>
       <td>Row 8, Cell 4</td>
       <td>Row 8, Cell 5</td>
@@ -727,8 +745,8 @@
       <td>Row 8, Cell 18</td>
     </tr>
     <tr>
-      <td>Row 9, Cell 1</td>
-      <td>Row 9, Cell 2</td>
+      <td class="hidden">Row 9, Cell 1</td>
+      <td class="hidden">Row 9, Cell 2</td>
       <td>Row 9, Cell 3</td>
       <td>Row 9, Cell 4</td>
       <td>Row 9, Cell 5</td>
