--- a/index.html
+++ b/index.html
@@ -688,7 +688,16 @@
           </ul>
       </td>
       <td class="hidden">Row 6, Cell 3</td>
-      <td>Row 6, Cell 4</td>
+      <td id="hafnium" class="solids" tabindex="0">
+            <ul>
+             <li data-atomicnumber="72"><span class="bigfont1" aria-label="atomic number 72">72</span></li>
+             <li data-symbol="H f" aria-label="atomic symbol H f" class="bigfont2">H<span class="letter-tight">f</span></li>
+             <li data-element="hafnium"><span class="bigfont1" aria-label="element">Hafnium</span></li>
+             <li data-weight="178.49"><span class="bigfont1" aria-label="standard atomic weight  178 . 4 9">178.49</span></li>
+             <li data-groundstate="hafnium"><span class="bigfont1" aria-label="ground [Xe]4f145d2 6s2">[Xe]4f<sup>14</sup>5d<sup>2</sup> 6s<sup>2</sup><span></li>
+             <li data-ev="6.8251"><span class="bigfont1" aria-label="ionization energy 6 . 8 2 5 1">6.8251</span></li> 
+          </ul>
+      </td>
       <td>Row 6, Cell 5</td>
       <td>Row 6, Cell 6</td>
       <td>Row 6, Cell 7</td>
