--- a/index_backup1.html
+++ b/index_backup1.html
@@ -677,9 +677,27 @@
              <li data-ev="3.8939"><span class="bigfont1" aria-label="ionization energy 3 . 8 9 3 9">3.8939</span></li> 
           </ul>
       </td>
-      <td>Row 6, Cell 2</td>
-      <td>Row 6, Cell 3</td>
-      <td>Row 6, Cell 4</td>
+      <td id="barium" class="solids" tabindex="0">
+            <ul>
+             <li data-atomicnumber="56"><span class="bigfont1" aria-label="atomic number 56">56</span></li>
+             <li data-symbol="B a" aria-label="atomic symbol B a" class="bigfont2">B<span class="letter-tight">a</span></li>
+             <li data-element="barium"><span class="bigfont1" aria-label="element">Barium</span></li>
+             <li data-weight=" 137.33"><span class="bigfont1" aria-label="standard atomic weight  137 . 3 3"> 137.33</span></li>
+             <li data-groundstate="barium"><span class="bigfont1" aria-label="ground [Xe]6s 2">[Xe]6s<sup>2</sup></span></li>
+             <li data-ev="5.2117"><span class="bigfont1" aria-label="ionization energy 5 . 2 1 1 7">5.2117</span></li> 
+          </ul>
+      </td>
+      <td class="hidden">Row 6, Cell 3</td>
+      <td id="hafnium" class="solids" tabindex="0">
+            <ul>
+             <li data-atomicnumber="72"><span class="bigfont1" aria-label="atomic number 72">72</span></li>
+             <li data-symbol="H f" aria-label="atomic symbol H f" class="bigfont2">H<span class="letter-tight">f</span></li>
+             <li data-element="hafnium"><span class="bigfont1" aria-label="element">Hafnium</span></li>
+             <li data-weight="178.49"><span class="bigfont1" aria-label="standard atomic weight  178 . 4 9">178.49</span></li>
+             <li data-groundstate="hafnium"><span class="bigfont1" aria-label="ground [Xe]4f145d2 6s2">[Xe]4f<sup>14</sup>5d<sup>2</sup> 6s<sup>2</sup><span></li>
+             <li data-ev="6.8251"><span class="bigfont1" aria-label="ionization energy 6 . 8 2 5 1">6.8251</span></li> 
+          </ul>
+      </td>
       <td>Row 6, Cell 5</td>
       <td>Row 6, Cell 6</td>
       <td>Row 6, Cell 7</td>
@@ -698,7 +716,7 @@
     <tr>
       <td>Row 7, Cell 1</td>
       <td>Row 7, Cell 2</td>
-      <td>Row 7, Cell 3</td>
+      <td class="hidden">Row 7, Cell 3</td>
       <td>Row 7, Cell 4</td>
       <td>Row 7, Cell 5</td>
       <td>Row 7, Cell 6</td>
@@ -716,8 +734,8 @@
       <td>Row 7, Cell 18</td>
     </tr>
     <tr>
-      <td>Row 8, Cell 1</td>
-      <td>Row 8, Cell 2</td>
+      <td class="hidden">Row 8, Cell 1</td>
+      <td class="hidden">Row 8, Cell 2</td>
       <td>Row 8, Cell 3</td>
       <td>Row 8, Cell 4</td>
       <td>Row 8, Cell 5</td>
@@ -736,8 +754,8 @@
       <td>Row 8, Cell 18</td>
     </tr>
     <tr>
-      <td>Row 9, Cell 1</td>
-      <td>Row 9, Cell 2</td>
+      <td class="hidden">Row 9, Cell 1</td>
+      <td class="hidden">Row 9, Cell 2</td>
       <td>Row 9, Cell 3</td>
       <td>Row 9, Cell 4</td>
       <td>Row 9, Cell 5</td>
