--- a/index_backup1.html
+++ b/index_backup1.html
@@ -698,7 +698,16 @@
              <li data-ev="6.8251"><span class="bigfont1" aria-label="ionization energy 6 . 8 2 5 1">6.8251</span></li> 
           </ul>
       </td>
-      <td>Row 6, Cell 5</td>
+       <td id="tantalum" class="solids" tabindex="0">
+            <ul>
+             <li data-atomicnumber="73"><span class="bigfont1" aria-label="atomic number 73">73</span></li>
+             <li data-symbol="T a" aria-label="atomic symbol T a" class="bigfont2">T<span class="letter-tight">a</span></li>
+             <li data-element="tantalum"><span class="bigfont1" aria-label="element">Tantalum</span></li>
+             <li data-weight="180.95"><span class="bigfont1" aria-label="standard atomic weight  180 . 9 5">180.95</span></li>
+             <li data-groundstate="tantalum"><span class="bigfont1" aria-label="ground [Xe]4f 14 5 d 3 6s2">[Xe]4f<sup>14</sup>5d<sup>3</sup> 6s<sup>2</sup><span></li>
+             <li data-ev="7.5496"><span class="bigfont1" aria-label="ionization energy 7 . 5 4 9 6">7.5496</span></li> 
+          </ul>
+      </td>
       <td>Row 6, Cell 6</td>
       <td>Row 6, Cell 7</td>
       <td>Row 6, Cell 8</td>
