--- a/index.html
+++ b/index.html
@@ -698,17 +698,26 @@
              <li data-ev="6.8251"><span class="bigfont1" aria-label="ionization energy 6 . 8 2 5 1">6.8251</span></li> 
           </ul>
       </td>
-       <td id="tantalum" class="solids" tabindex="0">
+      <td id="tantalum" class="solids" tabindex="0">
             <ul>
              <li data-atomicnumber="73"><span class="bigfont1" aria-label="atomic number 73">73</span></li>
              <li data-symbol="T a" aria-label="atomic symbol T a" class="bigfont2">T<span class="letter-tight">a</span></li>
              <li data-element="tantalum"><span class="bigfont1" aria-label="element">Tantalum</span></li>
              <li data-weight="180.95"><span class="bigfont1" aria-label="standard atomic weight  180 . 9 5">180.95</span></li>
-             <li data-groundstate="tantalum"><span class="bigfont1" aria-label="ground [Xe]4f 14 5 d 3 6s2">[Xe]4f<sup>14</sup>5d<sup>3</sup> 6s<sup>2</sup><span></li>
+             <li data-groundstate="tantalum"><span class="bigfont1" aria-label="ground [Xe]4f 14 5 d 3 6s2">[Xe]4f<sup>14</sup>5d<sup>3</sup>6s<sup>2</sup><span></li>
              <li data-ev="7.5496"><span class="bigfont1" aria-label="ionization energy 7 . 5 4 9 6">7.5496</span></li> 
           </ul>
       </td>
-      <td>Row 6, Cell 6</td>
+      <td id="tungsten" class="solids" tabindex="0">
+            <ul>
+             <li data-atomicnumber="74"><span class="bigfont1" aria-label="atomic number 74">74</span></li>
+             <li data-symbol="W" aria-label="atomic symbol W" class="bigfont2">W<span class="letter-tight">&nbsp;</span></li>
+             <li data-element="tungsten"><span class="bigfont1" aria-label="element">Tungsten</span></li>
+             <li data-weight="183.84"><span class="bigfont1" aria-label="standard atomic weight  183 . 8 4">183.84</span></li>
+             <li data-groundstate="tungsten"><span class="bigfont1" aria-label="ground [Xe]4f 14 5 d 4 6s2">[Xe]4f<sup>14</sup>5d<sup>4</sup>6s<sup>2</sup><span></li>
+             <li data-ev="7.8640"><span class="bigfont1" aria-label="ionization energy 7 . 8 6 4 0">7.8640</span></li> 
+          </ul>
+      </td>
       <td>Row 6, Cell 7</td>
       <td>Row 6, Cell 8</td>
       <td>Row 6, Cell 9</td>
