--- a/index_backup2.html
+++ b/index_backup2.html
@@ -688,9 +688,36 @@
           </ul>
       </td>
       <td class="hidden">Row 6, Cell 3</td>
-      <td>Row 6, Cell 4</td>
-      <td>Row 6, Cell 5</td>
-      <td>Row 6, Cell 6</td>
+      <td id="hafnium" class="solids" tabindex="0">
+            <ul>
+             <li data-atomicnumber="72"><span class="bigfont1" aria-label="atomic number 72">72</span></li>
+             <li data-symbol="H f" aria-label="atomic symbol H f" class="bigfont2">H<span class="letter-tight">f</span></li>
+             <li data-element="hafnium"><span class="bigfont1" aria-label="element">Hafnium</span></li>
+             <li data-weight="178.49"><span class="bigfont1" aria-label="standard atomic weight  178 . 4 9">178.49</span></li>
+             <li data-groundstate="hafnium"><span class="bigfont1" aria-label="ground [Xe]4f145d2 6s2">[Xe]4f<sup>14</sup>5d<sup>2</sup> 6s<sup>2</sup><span></li>
+             <li data-ev="6.8251"><span class="bigfont1" aria-label="ionization energy 6 . 8 2 5 1">6.8251</span></li> 
+          </ul>
+      </td>
+      <td id="tantalum" class="solids" tabindex="0">
+            <ul>
+             <li data-atomicnumber="73"><span class="bigfont1" aria-label="atomic number 73">73</span></li>
+             <li data-symbol="T a" aria-label="atomic symbol T a" class="bigfont2">T<span class="letter-tight">a</span></li>
+             <li data-element="tantalum"><span class="bigfont1" aria-label="element">Tantalum</span></li>
+             <li data-weight="180.95"><span class="bigfont1" aria-label="standard atomic weight  180 . 9 5">180.95</span></li>
+             <li data-groundstate="tantalum"><span class="bigfont1" aria-label="ground [Xe]4f 14 5 d 3 6s2">[Xe]4f<sup>14</sup>5d<sup>3</sup>6s<sup>2</sup><span></li>
+             <li data-ev="7.5496"><span class="bigfont1" aria-label="ionization energy 7 . 5 4 9 6">7.5496</span></li> 
+          </ul>
+      </td>
+      <td id="tungsten" class="solids" tabindex="0">
+            <ul>
+             <li data-atomicnumber="74"><span class="bigfont1" aria-label="atomic number 74">74</span></li>
+             <li data-symbol="W" aria-label="atomic symbol W" class="bigfont2">W<span class="letter-tight">&nbsp;</span></li>
+             <li data-element="tungsten"><span class="bigfont1" aria-label="element">Tungsten</span></li>
+             <li data-weight="183.84"><span class="bigfont1" aria-label="standard atomic weight  183 . 8 4">183.84</span></li>
+             <li data-groundstate="tungsten"><span class="bigfont1" aria-label="ground [Xe]4f 14 5 d 4 6s2">[Xe]4f<sup>14</sup>5d<sup>4</sup>6s<sup>2</sup><span></li>
+             <li data-ev="7.8640"><span class="bigfont1" aria-label="ionization energy 7 . 8 6 4 0">7.8640</span></li> 
+          </ul>
+      </td>
       <td>Row 6, Cell 7</td>
       <td>Row 6, Cell 8</td>
       <td>Row 6, Cell 9</td>
