--- a/index_backup2.html
+++ b/index_backup2.html
@@ -718,8 +718,26 @@
              <li data-ev="7.8640"><span class="bigfont1" aria-label="ionization energy 7 . 8 6 4 0">7.8640</span></li> 
           </ul>
       </td>
-      <td>Row 6, Cell 7</td>
-      <td>Row 6, Cell 8</td>
+      <td id="rhenium" class="solids" tabindex="0">
+            <ul>
+             <li data-atomicnumber="75"><span class="bigfont1" aria-label="atomic number 75">75</span></li>
+             <li data-symbol="R e" aria-label="atomic symbol R e" class="bigfont2">R<span class="letter-tight">e</span></li>
+             <li data-element="rhenium"><span class="bigfont1" aria-label="element">Rhenium</span></li>
+             <li data-weight="186.21"><span class="bigfont1" aria-label="standard atomic weight  186 . 2 1">186.21</span></li>
+             <li data-groundstate="rhenium"><span class="bigfont1" aria-label="ground [Xe]4f 14 5 d 5 6s2">[Xe]4f<sup>14</sup>5d<sup>5</sup>6s<sup>2</sup><span></li>
+             <li data-ev="7.8335"><span class="bigfont1" aria-label="ionization energy 7 . 8 3 3 5">7.8335</span></li> 
+          </ul>
+      </td>
+      <td id="osmium" class="solids" tabindex="0">
+            <ul>
+             <li data-atomicnumber="76"><span class="bigfont1" aria-label="atomic number 76">76</span></li>
+             <li data-symbol="O s" aria-label="atomic symbol O s" class="bigfont2">O<span class="letter-tight">s</span></li>
+             <li data-element="osmium"><span class="bigfont1" aria-label="element">Osmium</span></li>
+             <li data-weight="190.23"><span class="bigfont1" aria-label="standard atomic weight  190 . 2 3">190.23</span></li>
+             <li data-groundstate="osmium"><span class="bigfont1" aria-label="ground [Xe]4f 14 5 d 6 6s2">[Xe]4f<sup>14</sup>5d<sup>6</sup>6s<sup>2</sup><span></li>
+             <li data-ev="8.4382"><span class="bigfont1" aria-label="ionization energy 8 . 4 3 8 2">8.4382</span></li> 
+          </ul>
+      </td>
       <td>Row 6, Cell 9</td>
       <td>Row 6, Cell 10</td>
       <td>Row 6, Cell 11</td>
