--- a/index_backup2.html
+++ b/index_backup2.html
@@ -738,8 +738,26 @@
              <li data-ev="8.4382"><span class="bigfont1" aria-label="ionization energy 8 . 4 3 8 2">8.4382</span></li> 
           </ul>
       </td>
-      <td>Row 6, Cell 9</td>
-      <td>Row 6, Cell 10</td>
+      <td id="iridium" class="solids" tabindex="0">
+            <ul>
+             <li data-atomicnumber="77"><span class="bigfont1" aria-label="atomic number 77">77</span></li>
+             <li data-symbol="I r" aria-label="atomic symbol I r" class="bigfont2">I<span class="letter-tight">r</span></li>
+             <li data-element="iridium"><span class="bigfont1" aria-label="element">Iridium</span></li>
+             <li data-weight="192.22"><span class="bigfont1" aria-label="standard atomic weight 192 . 2 2">192.22</span></li>
+             <li data-groundstate="iridium"><span class="bigfont1" aria-label="ground [Xe]4f 14 5 d 7 6s2">[Xe]4f<sup>14</sup>5d<sup>7</sup>6s<sup>2</sup><span></li>
+             <li data-ev="8.9670"><span class="bigfont1" aria-label="ionization energy 8 . 9 6 7 0">8.9670</span></li> 
+          </ul>
+      </td>
+       <td id="platinum" class="solids" tabindex="0">
+            <ul>
+             <li data-atomicnumber="78"><span class="bigfont1" aria-label="atomic number 78">78</span></li>
+             <li data-symbol="P t" aria-label="atomic symbol P t" class="bigfont2">P<span class="letter-tight">t</span></li>
+             <li data-element="platinum"><span class="bigfont1" aria-label="element">Platinum</span></li>
+             <li data-weight="195.08"><span class="bigfont1" aria-label="standard atomic weight 195 . 0 8">195.08</span></li>
+             <li data-groundstate="platinum"><span class="bigfont1" aria-label="ground [Xe]4f 14 5 d 9 6s">[Xe]4f<sup>14</sup>5d<sup>9</sup>6s</li>
+             <li data-ev="8.9588"><span class="bigfont1" aria-label="ionization energy 8 . 9 5 8 8">8.9588</span></li> 
+          </ul>
+      </td>
       <td>Row 6, Cell 11</td>
       <td>Row 6, Cell 12</td>
       <td>Row 6, Cell 13</td>
