--- a/index.html
+++ b/index.html
@@ -758,7 +758,16 @@
              <li data-ev="8.9588"><span class="bigfont1" aria-label="ionization energy 8 . 9 5 8 8">8.9588</span></li> 
           </ul>
       </td>
-      <td>Row 6, Cell 11</td>
+       <td id="gold" class="solids" tabindex="0">
+            <ul>
+             <li data-atomicnumber="79"><span class="bigfont1" aria-label="atomic number 79">79</span></li>
+             <li data-symbol="A u" aria-label="atomic symbol A u" class="bigfont2">A<span class="letter-tight">u</span></li>
+             <li data-element="gold"><span class="bigfont1" aria-label="element">Gold</span></li>
+             <li data-weight="196.97"><span class="bigfont1" aria-label="standard atomic weight 196 . 9 7">196.97</span></li>
+             <li data-groundstate="gold"><span class="bigfont1" aria-label="ground [Xe]4f 14 5 d 10 6s">[Xe]4f<sup>14</sup>5d<sup>10</sup>6s</li>
+             <li data-ev="9.2256"><span class="bigfont1" aria-label="ionization energy 9 . 2 2 5 6">9.2256</span></li> 
+          </ul>
+      </td>
       <td>Row 6, Cell 12</td>
       <td>Row 6, Cell 13</td>
       <td>Row 6, Cell 14</td>
