--- a/index_backup1.html
+++ b/index_backup1.html
@@ -748,8 +748,26 @@
              <li data-ev="8.9670"><span class="bigfont1" aria-label="ionization energy 8 . 9 6 7 0">8.9670</span></li> 
           </ul>
       </td>
-      <td>Row 6, Cell 10</td>
-      <td>Row 6, Cell 11</td>
+       <td id="platinum" class="solids" tabindex="0">
+            <ul>
+             <li data-atomicnumber="78"><span class="bigfont1" aria-label="atomic number 78">78</span></li>
+             <li data-symbol="P t" aria-label="atomic symbol P t" class="bigfont2">P<span class="letter-tight">t</span></li>
+             <li data-element="platinum"><span class="bigfont1" aria-label="element">Platinum</span></li>
+             <li data-weight="195.08"><span class="bigfont1" aria-label="standard atomic weight 195 . 0 8">195.08</span></li>
+             <li data-groundstate="platinum"><span class="bigfont1" aria-label="ground [Xe]4f 14 5 d 9 6s">[Xe]4f<sup>14</sup>5d<sup>9</sup>6s</li>
+             <li data-ev="8.9588"><span class="bigfont1" aria-label="ionization energy 8 . 9 5 8 8">8.9588</span></li> 
+          </ul>
+      </td>
+       <td id="gold" class="solids" tabindex="0">
+            <ul>
+             <li data-atomicnumber="79"><span class="bigfont1" aria-label="atomic number 79">79</span></li>
+             <li data-symbol="A u" aria-label="atomic symbol A u" class="bigfont2">A<span class="letter-tight">u</span></li>
+             <li data-element="gold"><span class="bigfont1" aria-label="element">Gold</span></li>
+             <li data-weight="196.97"><span class="bigfont1" aria-label="standard atomic weight 196 . 9 7">196.97</span></li>
+             <li data-groundstate="gold"><span class="bigfont1" aria-label="ground [Xe]4f 14 5 d 10 6s">[Xe]4f<sup>14</sup>5d<sup>10</sup>6s</li>
+             <li data-ev="9.2256"><span class="bigfont1" aria-label="ionization energy 9 . 2 2 5 6">9.2256</span></li> 
+          </ul>
+      </td>
       <td>Row 6, Cell 12</td>
       <td>Row 6, Cell 13</td>
       <td>Row 6, Cell 14</td>
@@ -826,7 +844,7 @@
     <footer>
   <div class="left100">
      <p tabindex="0">This page last modified or reviewed</p>
-        Content: 3 December 2019<br />
+        Content: 4 December 2019<br />
         WebAim: 2 December 2019 0<br />
         NuHTML: 2 December 2019 multiple aria-label warnings (expected, in this case)<br />
         Note:aria-label used to over-ride screen reader mispronunciations of atomic weights<br />
