--- a/index.html
+++ b/index.html
@@ -778,7 +778,16 @@
              <li data-ev="10.4375"><span class="bigfont1" aria-label="ionization energy 10 . 4 3 7 5">10.4375</span></li> 
           </ul>
       </td>
-      <td>Row 6, Cell 13</td>
+      <td id="thallium" class="solids" tabindex="0">
+            <ul>
+             <li data-atomicnumber="81"><span class="bigfont1" aria-label="atomic number 81">81</span></li>
+             <li data-symbol="T i" aria-label="atomic symbol T i" class="bigfont2">T<span class="letter-tight">i</span></li>
+             <li data-element="thallium"><span class="bigfont1" aria-label="element">Thallium</span></li>
+             <li data-weight="204.38"><span class="bigfont1" aria-label="standard atomic weight 204 . 3 8">204.38</span></li>
+             <li data-groundstate="thallium"><span class="bigfont1" aria-label="ground [Hg]6p">[Hg]6p</li>
+             <li data-ev="6.1083"><span class="bigfont1" aria-label="ionization energy 6 . 1 0 8 3">6.1083</span></li> 
+          </ul>
+      </td>
       <td>Row 6, Cell 14</td>
       <td>Row 6, Cell 15</td>
       <td>Row 6, Cell 16</td>
