--- a/index.html
+++ b/index.html
@@ -788,7 +788,16 @@
              <li data-ev="6.1083"><span class="bigfont1" aria-label="ionization energy 6 . 1 0 8 3">6.1083</span></li> 
           </ul>
       </td>
-      <td>Row 6, Cell 14</td>
+      <td id="lead" class="solids" tabindex="0">
+            <ul>
+             <li data-atomicnumber="82"><span class="bigfont1" aria-label="atomic number 82">82</span></li>
+             <li data-symbol="P b" aria-label="atomic symbol P b" class="bigfont2">P<span class="letter-tight">b</span></li>
+             <li data-element="lead"><span class="bigfont1" aria-label="element">Lead</span></li>
+             <li data-weight="207.2"><span class="bigfont1" aria-label="standard atomic weight 207 . 2">207.2</span></li>
+             <li data-groundstate="lead"><span class="bigfont1" aria-label="ground [Hg]6p 2">[Hg]6p<sup>2</sup></li>
+             <li data-ev="7.4167"><span class="bigfont1" aria-label="ionization energy 7 . 4 1 6 7">7.4167</span></li> 
+          </ul>
+      </td>
       <td>Row 6, Cell 15</td>
       <td>Row 6, Cell 16</td>
       <td>Row 6, Cell 17</td>
