--- a/index.html
+++ b/index.html
@@ -801,7 +801,7 @@
        <td id="bismuth" class="solids" tabindex="0">
             <ul>
              <li data-atomicnumber="83"><span class="bigfont1" aria-label="atomic number 83">83</span></li>
-             <li data-symbol="P b" aria-label="atomic symbol P b" class="bigfont2">P<span class="letter-tight">b</span></li>
+             <li data-symbol="B i" aria-label="atomic symbol B i" class="bigfont2">B<span class="letter-tight">i</span></li>
              <li data-element="bismuth"><span class="bigfont1" aria-label="element">Bismuth</span></li>
              <li data-weight="208.98"><span class="bigfont1" aria-label="standard atomic weight 208 . 9 8">208.98</span></li>
              <li data-groundstate="bismuth"><span class="bigfont1" aria-label="ground [Hg]6p 3">[Hg]6p<sup>3</sup></li>
