--- a/index_backup2.html
+++ b/index_backup2.html
@@ -798,7 +798,16 @@
              <li data-ev="7.4167"><span class="bigfont1" aria-label="ionization energy 7 . 4 1 6 7">7.4167</span></li> 
           </ul>
       </td>
-      <td>Row 6, Cell 15</td>
+       <td id="bismuth" class="solids" tabindex="0">
+            <ul>
+             <li data-atomicnumber="83"><span class="bigfont1" aria-label="atomic number 83">83</span></li>
+             <li data-symbol="B i" aria-label="atomic symbol B i" class="bigfont2">B<span class="letter-tight">i</span></li>
+             <li data-element="bismuth"><span class="bigfont1" aria-label="element">Bismuth</span></li>
+             <li data-weight="208.98"><span class="bigfont1" aria-label="standard atomic weight 208 . 9 8">208.98</span></li>
+             <li data-groundstate="bismuth"><span class="bigfont1" aria-label="ground [Hg]6p 3">[Hg]6p<sup>3</sup></li>
+             <li data-ev="7.2855"><span class="bigfont1" aria-label="ionization energy 7 . 2 8 5 5">7.2855</span></li> 
+          </ul>
+      </td>
       <td>Row 6, Cell 16</td>
       <td>Row 6, Cell 17</td>
       <td>Row 6, Cell 18</td>
@@ -867,7 +876,7 @@
 </table>
 </div>
     
-    </main>
+  </main>
     <footer>
   <div class="left100">
      <p tabindex="0">This page last modified or reviewed</p>
