--- a/index_backup1.html
+++ b/index_backup1.html
@@ -801,14 +801,23 @@
        <td id="bismuth" class="solids" tabindex="0">
             <ul>
              <li data-atomicnumber="83"><span class="bigfont1" aria-label="atomic number 83">83</span></li>
-             <li data-symbol="P b" aria-label="atomic symbol P b" class="bigfont2">P<span class="letter-tight">b</span></li>
+             <li data-symbol="B i" aria-label="atomic symbol B i" class="bigfont2">B<span class="letter-tight">i</span></li>
              <li data-element="bismuth"><span class="bigfont1" aria-label="element">Bismuth</span></li>
              <li data-weight="208.98"><span class="bigfont1" aria-label="standard atomic weight 208 . 9 8">208.98</span></li>
              <li data-groundstate="bismuth"><span class="bigfont1" aria-label="ground [Hg]6p 3">[Hg]6p<sup>3</sup></li>
              <li data-ev="7.2855"><span class="bigfont1" aria-label="ionization energy 7 . 2 8 5 5">7.2855</span></li> 
           </ul>
       </td>
-      <td>Row 6, Cell 16</td>
+      <td id="polonium" class="solids" tabindex="0">
+            <ul>
+             <li data-atomicnumber="84"><span class="bigfont1" aria-label="atomic number 84">84</span></li>
+             <li data-symbol="P o" aria-label="atomic symbol P o" class="bigfont2">P<span class="letter-tight">o</span></li>
+             <li data-element="polonium"><span class="bigfont1" aria-label="element">Polonium</span></li>
+             <li data-weight="(209)"><span class="bigfont1" aria-label="standard atomic weight (209)">(209)</span></li>
+             <li data-groundstate="polonium"><span class="bigfont1" aria-label="ground [Hg]6p 4">[Hg]6p<sup>4</sup></li>
+             <li data-ev="8.414"><span class="bigfont1" aria-label="ionization energy 8 . 4 1 4">8.414</span></li> 
+          </ul>
+      </td>
       <td>Row 6, Cell 17</td>
       <td>Row 6, Cell 18</td>
     </tr>
@@ -876,7 +885,7 @@
 </table>
 </div>
     
-    </main>
+  </main>
     <footer>
   <div class="left100">
      <p tabindex="0">This page last modified or reviewed</p>
